objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Allocated_Service_Group__c</fullName>
        <description>Allocated Service Group Description</description>
        <label>Allocated Service Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Entity_Name__c</fullName>
        <description>Quote Integration: Contain Business Entity Name from EDW - BK_BUSINESS_ENTITY_NAME</description>
        <label>Business Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <description>Business Entity associated with the technology.</description>
        <label>Business Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>AS-S</fullName>
                </value>
                <value>
                    <fullName>AS-T</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Computing Systems</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching</fullName>
                </value>
                <value>
                    <fullName>Enterprise Routing</fullName>
                </value>
                <value>
                    <fullName>Enterprise Switching</fullName>
                </value>
                <value>
                    <fullName>Industrial IOT Networking</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>Meraki</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider Routing</fullName>
                </value>
                <value>
                    <fullName>SP Video Infrastructure</fullName>
                </value>
                <value>
                    <fullName>SP Video Software and Solutions</fullName>
                </value>
                <value>
                    <fullName>TS-S</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_1__c</fullName>
        <label>Product Family 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family_2__c</fullName>
        <label>Product Family 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family_3__c</fullName>
        <label>Product Family 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Searchable__c</fullName>
        <description>Searchable</description>
        <label>Searchable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <description>Service Category Description</description>
        <label>Service Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_1__c</fullName>
        <label>Service Level 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS Other-Combined Services</fullName>
                </value>
                <value>
                    <fullName>Adjustable Price RMS</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Core Networking</fullName>
                </value>
                <value>
                    <fullName>Data Center and Cloud</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SP Mobility</fullName>
                </value>
                <value>
                    <fullName>SP Video</fullName>
                </value>
                <value>
                    <fullName>24x7x2</fullName>
                </value>
                <value>
                    <fullName>24x7x2OS</fullName>
                </value>
                <value>
                    <fullName>24x7x4</fullName>
                </value>
                <value>
                    <fullName>24x7x4OS</fullName>
                </value>
                <value>
                    <fullName>8x5x4</fullName>
                </value>
                <value>
                    <fullName>8x5x4OS</fullName>
                </value>
                <value>
                    <fullName>8x5xNBD</fullName>
                </value>
                <value>
                    <fullName>8x5xNBDOS</fullName>
                </value>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>AMSP</fullName>
                </value>
                <value>
                    <fullName>AMSS</fullName>
                </value>
                <value>
                    <fullName>AMST</fullName>
                </value>
                <value>
                    <fullName>Assessments Svcs</fullName>
                </value>
                <value>
                    <fullName>ATA-Enhanced Managed Service</fullName>
                </value>
                <value>
                    <fullName>ATA-Premier Managed Service (MTD)</fullName>
                </value>
                <value>
                    <fullName>Best</fullName>
                </value>
                <value>
                    <fullName>Better</fullName>
                </value>
                <value>
                    <fullName>BLK</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>CBAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_2__c</fullName>
        <label>Service Level 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>C2P</fullName>
                </value>
                <value>
                    <fullName>C4P</fullName>
                </value>
                <value>
                    <fullName>C4S</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Collaboration</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Contact Center</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for IoE</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for NetworkDeployment</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Retail</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for SP General</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for SP Mobility</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Venues</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>ESP</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>NEDN</fullName>
                </value>
                <value>
                    <fullName>NEDO</fullName>
                </value>
                <value>
                    <fullName>NEEN</fullName>
                </value>
                <value>
                    <fullName>NEEO</fullName>
                </value>
                <value>
                    <fullName>NEMU</fullName>
                </value>
                <value>
                    <fullName>Network Device Security Assess (NDSA)</fullName>
                </value>
                <value>
                    <fullName>NLAS</fullName>
                </value>
                <value>
                    <fullName>NLAU</fullName>
                </value>
                <value>
                    <fullName>NLS1</fullName>
                </value>
                <value>
                    <fullName>NLSW</fullName>
                </value>
                <value>
                    <fullName>NS2P</fullName>
                </value>
                <value>
                    <fullName>NSNT</fullName>
                </value>
                <value>
                    <fullName>NSTE</fullName>
                </value>
                <value>
                    <fullName>NSTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_3__c</fullName>
        <label>Service Level 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Name_1__c</fullName>
        <description>Service Level Name 1</description>
        <label>Service Level Name 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS Other-Combined Services</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Core Networking</fullName>
                </value>
                <value>
                    <fullName>Data Center and Cloud</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SP Mobility</fullName>
                </value>
                <value>
                    <fullName>SP Video</fullName>
                </value>
                <value>
                    <fullName>24x7x2</fullName>
                </value>
                <value>
                    <fullName>24x7x2OS</fullName>
                </value>
                <value>
                    <fullName>24x7x4</fullName>
                </value>
                <value>
                    <fullName>24x7x4OS</fullName>
                </value>
                <value>
                    <fullName>8x5x4</fullName>
                </value>
                <value>
                    <fullName>8x5x4OS</fullName>
                </value>
                <value>
                    <fullName>8x5xNBD</fullName>
                </value>
                <value>
                    <fullName>8x5xNBDOS</fullName>
                </value>
                <value>
                    <fullName>Aci</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>AMSP</fullName>
                </value>
                <value>
                    <fullName>AMSS</fullName>
                </value>
                <value>
                    <fullName>AMST</fullName>
                </value>
                <value>
                    <fullName>Assessments Svcs</fullName>
                </value>
                <value>
                    <fullName>ATA-Enhanced Managed Service</fullName>
                </value>
                <value>
                    <fullName>ATA-Premier Managed Service (MTD)</fullName>
                </value>
                <value>
                    <fullName>Best</fullName>
                </value>
                <value>
                    <fullName>Better</fullName>
                </value>
                <value>
                    <fullName>BLK</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>CBAS</fullName>
                </value>
                <value>
                    <fullName>CBAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Name_2__c</fullName>
        <description>Service Level Name 2</description>
        <label>Service Level Name 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>C2P</fullName>
                </value>
                <value>
                    <fullName>C4P</fullName>
                </value>
                <value>
                    <fullName>C4S</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Collaboration</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Contact Center</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for IoE</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for NetworkDeployment</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Retail</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for SP General</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for SP Mobility</fullName>
                </value>
                <value>
                    <fullName>ConnectedAnalytics for Venues</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>ESP</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>NEDN</fullName>
                </value>
                <value>
                    <fullName>NEDO</fullName>
                </value>
                <value>
                    <fullName>NEEN</fullName>
                </value>
                <value>
                    <fullName>NEEO</fullName>
                </value>
                <value>
                    <fullName>NEMU</fullName>
                </value>
                <value>
                    <fullName>Network Device Security Assess (NDSA)</fullName>
                </value>
                <value>
                    <fullName>NLAS</fullName>
                </value>
                <value>
                    <fullName>NLAU</fullName>
                </value>
                <value>
                    <fullName>NLS1</fullName>
                </value>
                <value>
                    <fullName>NLSW</fullName>
                </value>
                <value>
                    <fullName>NS2P</fullName>
                </value>
                <value>
                    <fullName>NSNT</fullName>
                </value>
                <value>
                    <fullName>NSTE</fullName>
                </value>
                <value>
                    <fullName>NSTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Name_3__c</fullName>
        <description>Service Level Name 3</description>
        <label>Service Level Name 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Program__c</fullName>
        <description>Service Program Description</description>
        <label>Service Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>Added for ISP Mar 09 release to classify the Service Program as AS or TS</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Business_Entity_Name__c</fullName>
        <description>Quote Integration: Contain Business Entity Name from EDW - BK_SUB_BUSINESS_ENTITY_NAME</description>
        <label>Sub Business Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Entity__c</fullName>
        <description>Quote Integration: Contain Sub Business Entity Description from EDW - SUB_BUSINESS_ENTITY_DESCR</description>
        <label>Sub Business Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_BE_SubBE__c</fullName>
        <description>Quote Integration: Contain Unique Combination of BE and Sub BE Description and Code</description>
        <externalId>true</externalId>
        <label>Unique BE-SubBE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Business_Entity__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Service_Level_1__c</columns>
        <columns>Service_Category__c</columns>
        <columns>Service_Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Tech_and_Services</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Product_Family_1__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Service_Level_1__c</columns>
        <columns>Service_Level_2__c</columns>
        <columns>Service_Level_3__c</columns>
        <columns>Service_Level_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Tech and Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Techs</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Unique_BE_SubBE__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Product_Family_1__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Service_Level_1__c</columns>
        <columns>Service_Level_2__c</columns>
        <columns>Service_Level_3__c</columns>
        <columns>Service_Level_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <label>Inactive Techs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Services</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Searchable__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Service_Type__c</columns>
        <columns>Business_Entity__c</columns>
        <columns>Service_Category__c</columns>
        <columns>Allocated_Service_Group__c</columns>
        <columns>Service_Program__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Service_Level_1__c</columns>
        <columns>Service_Level_2__c</columns>
        <columns>Service_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Searchable__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Services_Inactive</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Service_Type__c</columns>
        <columns>Business_Entity__c</columns>
        <columns>Service_Category__c</columns>
        <columns>Allocated_Service_Group__c</columns>
        <columns>Service_Program__c</columns>
        <columns>Searchable__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Service_Level_1__c</columns>
        <columns>Service_Level_2__c</columns>
        <columns>Service_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Services-Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Technology</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Searchable__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>Business_Entity__c</columns>
        <columns>Sub_Business_Entity__c</columns>
        <columns>Unique_BE_SubBE__c</columns>
        <columns>Product_Family_1__c</columns>
        <columns>Business_Entity_Name__c</columns>
        <columns>Sub_Business_Entity_Name__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <label>Technology</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Technology_Searchable_Yes</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Searchable__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>Business_Entity__c</columns>
        <columns>Sub_Business_Entity__c</columns>
        <columns>Unique_BE_SubBE__c</columns>
        <columns>Product_Family_1__c</columns>
        <columns>Business_Entity_Name__c</columns>
        <columns>Sub_Business_Entity_Name__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <filters>
            <field>Searchable__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Technology-Searchable-Yes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>